feat: add aside file

--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
                     <aside>
                     </aside>
                     <footer>
+                        <h3>Featured Companys</h3>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
                     </footer>
                 </div>
             </div>
