feat: footer is ready

--- a/index.html
+++ b/index.html
@@ -165,12 +165,18 @@
                     </aside>
                     <footer>
                         <h3>Featured Companys</h3>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <ul>
+                            <div class="ul">
+                                <li><a href="https://rdio.com"></a></li>
+                                <li><a href="https://drafts.css.org/"></a></li>
+                                <li><a href="https://www.deviantart.com/"></a></li>
+                            </div>
+                            <div class="ul">
+                                <li><a href="https://www.xing.com/"></a></li>
+                                <li><a href="https://vimeo.com/"></a></li>
+                                <li><a href="https://vk.com"></a></li>
+                            </div>
+                        </ul>
                     </footer>
                 </div>
             </div>
