fix: common styles and index fixed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                     </div>
                     <div class="nav__search">
                         <input type="search" placeholder="Search Anything Here....">
-                        <button></button>
                     </div>
                     <div class="flex">
                         <a href="">
@@ -162,6 +161,74 @@
                 </main>
                 <div class="aside">
                     <aside>
+                        <form action="">
+                            <a href="">
+                                <input type="radio" name="aside__btn" id="aside__btn-1">
+                                <label for="aside__btn-1"></label>
+                            </a>
+                            <a href="">
+                                <input type="radio" name="aside__btn" id="aside__btn-2">
+                                <label for="aside__btn-2"></label>
+                            </a>
+                            <a href="">
+                                <input type="radio" name="aside__btn" id="aside__btn-3">
+                                <label for="aside__btn-3"></label>
+                            </a>
+                        </form>
+                        <div class="contacts">
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/jennifer-lawrence.jpeg" alt="Jennifer Lawrence">
+                                <div class="caption">
+                                    <h4>Jennifer Lawrence</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/brad-pitt.jpeg" alt="Brad Pitt">
+                                <div class="caption">
+                                    <h4>Brad Pitt</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/jesse-eisenberg.jpeg" alt="Jesse Eisenberg">
+                                <div class="caption">
+                                    <h4>Jesse Eisenberg</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/kristen-stewart.jpeg" alt="kristen Stewart">
+                                <div class="caption">
+                                    <h4>kristen Stewart</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/ben-affleck.jpeg" alt="Ben Affleck">
+                                <div class="caption">
+                                    <h4>Ben Affleck</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="search">
+                            <input type="search" placeholder="Search Peoples, Chats and Reviews">
+                            <button></button>
+                        </div>
                     </aside>
                     <footer>
                         <h3>Featured Companys</h3>
