fix: fixed problem with z-index

--- a/index.html
+++ b/index.html
@@ -130,33 +130,33 @@
                     </div>
                 </section>
             </header>
-            <div class="row__nowrap px900">
-                <main class="column">
-                    <div class="row column900px">
-                        <section class="s1">
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </section>
-                        <section class="s2">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, modi.</p>
-                        </section>
-                    </div>
-                    <div class="row__nowrap px1200">
-                        <section class="s3">
-                            <p>Loremserunt ut ea ipsa.</p>
-                        </section>
-                        <div class="column meow">
-                            <section class="s4">
-                                <p>Lorem ipsum nis animi, odio nesciunt ex nam nobis assumenda qui facilis quos.</p>
-                            </section>
-                            <div class="row__nowrap pxcolumn">
-                                <section class="s5">
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus qui dolorem aut quae sapiente assumenda ducimus perferendis nostrum quo culpa fugiat placeat, cupiditate iure repellendus.</p>
-                                </section>
-                                <section class="s6">
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil et provident minima libero fugiat suscipit harum ratione tenetur. Sint architecto vero fugiat. Culpa quisquam dolorum quidem cumque at earum unde.</p>
-                                </section>
-                            </div>
+            <div class="wrapper__middle">
+                <main>
+                    <section class="revenue-month">
+                        <h3>Monthly Revenue Progress</h3>
+                    </section>
+                    <section class="revenue-hour">
+                        <h3>Revenue Per Hour</h3>
+                        <div class="circle">
+                            <h2>$150</h2>
                         </div>
+                        <div>
+                            <span>1020</span><span>1020</span>
+                        </div>
+                    </section>
+                    <section class="feed">
+                        <h3>Customers Feed</h3>
+                    </section>
+                    <div class="wrapper__small">
+                        <section class="tasks">
+                            <h3>Todays Task</h3>
+                        </section>
+                        <section class="progress">
+                            <h3>Progress</h3>
+                        </section>
+                        <section class="shipments">
+                            <h3>Shipments</h3>
+                        </section>
                     </div>
                 </main>
                 <div class="aside">
