feat: added items for checking scrolls

--- a/index.html
+++ b/index.html
@@ -146,6 +146,92 @@
                     </section>
                     <section class="feed">
                         <h3>Customers Feed</h3>
+                        <div class="feeds">
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/sophie-turner.jpeg" alt="Sophie Turner">
+                                    <h6>10 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                </div>
+                            </div>
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/peter-quill.jpeg" alt="Peter Quill">
+                                    <h6>15 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Peter Quill</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                </div>
+                            </div>
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/sophie-turner.jpeg" alt="Sophie Turner">
+                                    <h6>10 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                </div>
+                            </div>
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/peter-quill.jpeg" alt="Peter Quill">
+                                    <h6>15 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Peter Quill</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                </div>
+                            </div>
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/sophie-turner.jpeg" alt="Sophie Turner">
+                                    <h6>10 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                    <p><em>Sophie Turner</em> is simply dummy text of the printing and
+                                        typesetting industry. Lorem Ipsum has been the 
+                                        industry's standard dummy text ever since the 1500s</p>
+                                </div>
+                            </div>
+                            <div class="feed__item">
+                                <div class="feed__avatar">
+                                    <img src="./source/img/avatars/peter-quill.jpeg" alt="Peter Quill">
+                                    <h6>15 Min Ago</h6>
+                                </div>
+                                <div class="feed__text">
+                                    <p><em>Peter Quill</em> is simply dummy text of the printing and 
+                                        typesetting industry. Lorem Ipsum has been the industry's
+                                        standard dummy text ever since the 1500s, when an</p>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                     <div class="wrapper__small">
                         <section class="tasks">
@@ -176,6 +262,30 @@
                             </a>
                         </form>
                         <div class="contacts">
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
                             <div class="contact__item">
                                 <img src="./source/img/avatars/jennifer-lawrence.jpeg" alt="Jennifer Lawrence">
                                 <div class="caption">
@@ -220,6 +330,30 @@
                                 <img src="./source/img/avatars/ben-affleck.jpeg" alt="Ben Affleck">
                                 <div class="caption">
                                     <h4>Ben Affleck</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
+                                    <h5>Cheif Authority</h5>
+                                </div>
+                                <a href=""></a>
+                            </div>
+                            <div class="contact__item">
+                                <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
+                                <div class="caption">
+                                    <h4>Leonardo Dicaprio</h4>
                                     <h5>Cheif Authority</h5>
                                 </div>
                                 <a href=""></a>
