fix: modified paddings

--- a/index.html
+++ b/index.html
@@ -239,9 +239,23 @@
                         </section>
                         <section class="progress">
                             <h3>Progress</h3>
+                            <div class="bar-chart">
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                                <div class="bar-chart__item"></div>
+                            </div>
+                            <h2>$150,0000</h2>
+                            <div>
+                                <span>1020</span><span>1020</span>
+                            </div>
                         </section>
                         <section class="shipments">
-                            <h3>Shipments</h3>
+                            <h3>Shipments</h3>                            
                         </section>
                     </div>
                 </main>
