feat: add fill in shipment section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,20 @@
                             </div>
                         </section>
                         <section class="shipments">
-                            <h3>Shipments</h3>                            
+                            <h3>Shipments</h3>
+                            <div class="usa-map">
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                                <div class="usa-map__item"></div>
+                            </div>
+                            <div class="shipments__numbers">
+                                <h2>$15,000</h2>
+                                <span>1020</span><span>1020</span>
+                            </div>
                         </section>
                     </div>
                 </main>
