feat: add tasks section

--- a/index.html
+++ b/index.html
@@ -236,6 +236,108 @@
                     <div class="wrapper__small">
                         <section class="tasks">
                             <h3>Todays Task</h3>
+                            <ul>
+                                <li>
+                                    <input type="checkbox" name="task" id="task1" checked>
+                                    <label for="task1">Arrange</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>12:24 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task2">
+                                    <label for="task2">Shipment</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:10 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task3">
+                                    <label for="task3">Make List</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:24 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task4">
+                                    <label for="task4">Review</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:30 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task5" checked>
+                                    <label for="task5">Arrange</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>12:24 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task6">
+                                    <label for="task6">Shipment</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:10 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task7">
+                                    <label for="task7">Make List</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:24 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task8">
+                                    <label for="task8">Review</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:30 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task9" checked>
+                                    <label for="task9">Arrange</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>12:24 AM</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="task" id="task10">
+                                    <label for="task10">Shipment</label>
+                                    <p>simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text
+                                        ever since the 1500s, when an</p>
+                                    <div class="clock">
+                                        <p>1:10 AM</p>
+                                    </div>
+                                </li>
+                            </ul>
                         </section>
                         <section class="progress">
                             <h3>Progress</h3>
